// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing historyReducer should do nothing with a junk action 1`] = `
Object {
  "archetype": "",
  "archetypeModified": false,
  "bonuses": Array [],
  "chi": Object {
    "demon": 0,
    "demonCultivation": 0,
    "earth": 0,
    "earthCultivation": 0,
    "enlightened": 0,
    "enlightenedCultivation": 0,
    "fire": 0,
    "fireCultivation": 0,
    "general": 0,
    "generalCultivation": 0,
    "metal": 0,
    "metalCultivation": 0,
    "water": 0,
    "waterCultivation": 0,
    "wood": 0,
    "woodCultivation": 0,
  },
  "concept": "No Concept",
  "destiny": 0,
  "discounts": Array [],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
  ],
  "loresheetOptions": Array [],
  "loresheets": Array [],
  "name": "No Name",
  "rank": "",
  "rankModified": false,
  "rankValue": -1,
  "skillSpecialities": Array [],
  "skills": Array [
    Object {
      "name": "Awareness",
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "value": 0,
    },
    Object {
      "name": "Learning",
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "value": 0,
    },
    Object {
      "name": "Might",
      "value": 0,
    },
    Object {
      "name": "Perform",
      "value": 0,
    },
    Object {
      "name": "Politics",
      "value": 0,
    },
    Object {
      "name": "Ride",
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "value": 0,
    },
    Object {
      "name": "Survival",
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 1`] = `
Object {
  "archetype": "warrior",
  "archetypeModified": true,
  "bonuses": Array [],
  "chi": Object {
    "demon": 0,
    "demonCultivation": 0,
    "earth": 0,
    "earthCultivation": 0,
    "enlightened": 0,
    "enlightenedCultivation": 0,
    "fire": 0,
    "fireCultivation": 0,
    "general": 10,
    "generalCultivation": 0,
    "metal": 0,
    "metalCultivation": 0,
    "water": 0,
    "waterCultivation": 0,
    "wood": 0,
    "woodCultivation": 0,
  },
  "concept": "Dread pirate Roberts",
  "destiny": 20,
  "discounts": Array [
    Object {
      "skills": Array [
        "Awareness",
        "Confidence",
        "Crafting",
        "Finesse",
        "Hardiness",
        "Inspire",
        "Learning",
        "Medicine",
        "Might",
        "Perform",
        "Politics",
        "Ride",
        "Stealth",
        "Survival",
        "Tactics",
        "Wu Wei",
      ],
      "type": "DISCOUNT_SKILL",
      "value": 20,
    },
  ],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
    Object {
      "concept": "Dread pirate Roberts",
      "type": "HEADER_SET_CONCEPT",
    },
    Object {
      "archetype": "warrior",
      "type": "HEADER_SET_ARCHETYPE",
    },
    Object {
      "rank": "4th_rank",
      "type": "HEADER_SET_RANK",
      "value": 2,
    },
  ],
  "loresheetOptions": Array [],
  "loresheets": Array [],
  "name": "Roberts",
  "rank": "4th_rank",
  "rankModified": true,
  "rankValue": 2,
  "skillSpecialities": Array [],
  "skills": Array [
    Object {
      "name": "Awareness",
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "value": 0,
    },
    Object {
      "name": "Learning",
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "value": 0,
    },
    Object {
      "name": "Might",
      "value": 0,
    },
    Object {
      "name": "Perform",
      "value": 0,
    },
    Object {
      "name": "Politics",
      "value": 0,
    },
    Object {
      "name": "Ride",
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "value": 0,
    },
    Object {
      "name": "Survival",
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
}
`;

exports[`Testing historyReducer should receive an HISTORY_DELETE action 2`] = `
Object {
  "archetype": "",
  "archetypeModified": false,
  "bonuses": Array [],
  "chi": Object {
    "demon": 0,
    "demonCultivation": 0,
    "earth": 0,
    "earthCultivation": 0,
    "enlightened": 0,
    "enlightenedCultivation": 0,
    "fire": 0,
    "fireCultivation": 0,
    "general": 0,
    "generalCultivation": 0,
    "metal": 0,
    "metalCultivation": 0,
    "water": 0,
    "waterCultivation": 0,
    "wood": 0,
    "woodCultivation": 0,
  },
  "concept": "No Concept",
  "destiny": 0,
  "discounts": Array [],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "Roberts",
      "type": "HEADER_SET_NAME",
    },
  ],
  "loresheetOptions": Array [],
  "loresheets": Array [],
  "name": "Roberts",
  "rank": "",
  "rankModified": false,
  "rankValue": -1,
  "skillSpecialities": Array [],
  "skills": Array [
    Object {
      "name": "Awareness",
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "value": 0,
    },
    Object {
      "name": "Learning",
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "value": 0,
    },
    Object {
      "name": "Might",
      "value": 0,
    },
    Object {
      "name": "Perform",
      "value": 0,
    },
    Object {
      "name": "Politics",
      "value": 0,
    },
    Object {
      "name": "Ride",
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "value": 0,
    },
    Object {
      "name": "Survival",
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
}
`;

exports[`Testing replayHistory should replay an history of actions 1`] = `
Object {
  "archetype": "",
  "archetypeModified": false,
  "bonuses": Array [],
  "chi": Object {
    "demon": 0,
    "demonCultivation": 0,
    "earth": 0,
    "earthCultivation": 0,
    "enlightened": 0,
    "enlightenedCultivation": 0,
    "fire": 0,
    "fireCultivation": 0,
    "general": 0,
    "generalCultivation": 0,
    "metal": 0,
    "metalCultivation": 0,
    "water": 0,
    "waterCultivation": 0,
    "wood": 0,
    "woodCultivation": 0,
  },
  "concept": "No Concept",
  "destiny": 0,
  "discounts": Array [],
  "entanglement": 0,
  "history": Array [
    Object {
      "type": "INITIAL_STATE",
    },
    Object {
      "name": "John",
      "type": "HEADER_SET_NAME",
    },
  ],
  "loresheetOptions": Array [],
  "loresheets": Array [],
  "name": "John",
  "rank": "",
  "rankModified": false,
  "rankValue": -1,
  "skillSpecialities": Array [],
  "skills": Array [
    Object {
      "name": "Awareness",
      "value": 0,
    },
    Object {
      "name": "Confidence",
      "value": 0,
    },
    Object {
      "name": "Crafting",
      "value": 0,
    },
    Object {
      "name": "Finesse",
      "value": 0,
    },
    Object {
      "name": "Hardiness",
      "value": 0,
    },
    Object {
      "name": "Inspire",
      "value": 0,
    },
    Object {
      "name": "Learning",
      "value": 0,
    },
    Object {
      "name": "Medicine",
      "value": 0,
    },
    Object {
      "name": "Might",
      "value": 0,
    },
    Object {
      "name": "Perform",
      "value": 0,
    },
    Object {
      "name": "Politics",
      "value": 0,
    },
    Object {
      "name": "Ride",
      "value": 0,
    },
    Object {
      "name": "Stealth",
      "value": 0,
    },
    Object {
      "name": "Survival",
      "value": 0,
    },
    Object {
      "name": "Tactics",
      "value": 0,
    },
    Object {
      "name": "Wu Wei",
      "value": 0,
    },
  ],
}
`;
